# django-gds-grabbage

./: 404.html  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  settings.py  sitemap.xml
.github/workflows/: ci.yml
contributing/: index.html
django_gds_grabbage/active_search/: apps.py  forms.py  types.py  views.py
django_gds_grabbage/active_search/templatetags/: active_search.py
django_gds_grabbage/gds_components/: apps.py
django_gds_grabbage/gds_components/govuk_frontend/: accordion.py  back_link.py  base.py  breadcrumbs.py  button.py  character_count.py  checkboxes.py  cookie_banner.py  date_input.py  details.py  error_message.py  error_summary.py  fieldset.py  file_upload.py  footer.py  header.py  hint.py  input.py  inset_text.py  label.py  notification_banner.py  pagination.py  panel.py  phase_banner.py  radios.py  select.py  skip_link.py  summary_list.py  table.py  tabs.py  tag.py  textarea.py  warning_text.py
docs/: .pages  gds-components.md  getting-started.md  index.md  mkdocs.yml
docs/contributing/: govuk-frontend.md  index.md
docs/gds-components/: accordion.md  index.md  pagination.md
docs/gds-components/template-tags/: breadcrumbs.md  index.md  tabs.md
docs/gds-components/templates/: index.md
docs/getting-started/: index.md
docs/getting-started/active-search/: index.md
docs/modules/: .pages  index.md
docs/modules/active-search/: index.md
docs/modules/gds-components/: .pages  index.md  python-components.md
docs/unstructured-notes/: index.md
example_project/: README.md  package-lock.json  package.json  pyproject.toml
example_project/example/: settings.py  urls.py  views.py
example_project/example/templates/: base.html
example_project/example_active_search/: urls.py  views.py
modules/: index.html
modules/active-search/: index.html
scripts/: generate_components.py
search/: search_index.json
(+97 files in other folders)
