[tool.poetry]
name = "dbt-govuk-django"
version = "0.1.0"
description = ""
authors = [
    "DBT Live Service Team <live.services@digital.trade.gov.uk>",
    "Cameron Lamb <cameron.lamb@digital.trade.gov.uk>",
]
license = "MIT"
readme = "README.md"
packages = [{include = "dbt_govuk_django"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.7"

crispy-forms-gds = { version = "^0.2.4", optional = true }
jinja2 = "^3.1.2"
govuk-frontend-jinja = "^2.5.0"
black = "^23.3.0"

[tool.poetry.extras]
crispy = ["crispy-forms-gds"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

