[tool.poetry]
name = "govuk_gds_grabbage"
version = "0.1.0"
description = ""
authors = [
    "DBT Live Service Team <live.services@digital.trade.gov.uk>",
    "Cam Lamb <cameron.lamb@digital.trade.gov.uk>",
    "Sam Dudley <samuel.dudley@digital.trade.gov.uk>",
]
license = "MIT"
readme = "README.md"
homepage = "https://uktrade.github.io/django-gds-grabbage/"
repository = "https://github.com/uktrade/django-gds-grabbage/"
documentation = "https://uktrade.github.io/django-gds-grabbage/"
packages = [{include = "django_gds_grabbage"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.7"
jinja2 = "^3.1.2"
govuk-frontend-jinja = "^2.5.0"

crispy-forms-gds = { version = "^0.2.4", optional = true }


[tool.poetry.extras]
crispy = ["crispy-forms-gds"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.5"
mkdocs-minify-plugin = "^0.6.4"
mkdocs-redirects = "^1.2.0"
mkdocstrings-python = "^0.9.0"
pillow = "^9.5.0"
cairosvg = "^2.7.0"
mkdocs-tech-docs-template = "^0.0.25"
mkdocs-awesome-pages-plugin = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

